--- a/_includes/home.njk
+++ b/_includes/home.njk
@@ -4,7 +4,7 @@ layout: base
 <section class="col-lg-8">
           <div class="section-header">
             <div class="brutal-section-number">01</div>
-            <h2 class="fw-bold brutal-title" id="recent-title">{{metadata.post.popular}}<span class="blink-cursor">_</span></h2>
+            <h2 class="fw-bold brutal-title" id="recent-title">{{metadata.post.lastest}}<span class="blink-cursor">_</span></h2>
           </div>
           <div class="row row-cols-1 row-cols-md-2 g-4">
            
