--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -4,7 +4,7 @@
       {% for s in metadata.footer.list %}<a href="{{s.url}}" class="text-dark me-3" title="{{s.nav}}"><i class="{{s.icon}}"></i></a>{% endfor %}
     </div>
 <div>
-<small>Built with <a class="text-dark" href="https://11ty.dev">11ty</a> develope by <a class="text-dark" href="https://adamdjbrett.com">Adam Dj Brett</a></small>
+<small>Built with <a class="text-dark" href="https://11ty.dev">11ty</a> developed by <a class="text-dark" href="https://adamdjbrett.com">Adam Dj Brett</a></small>
 </div>
   </footer>
  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Archivo+Black&family=Rammetto+One&family=VT323&family=Rubik+Glitch&family=Rubik+Mono+One&family=Space+Grotesk:wght@700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
