--- a/_includes/partials/nav.njk
+++ b/_includes/partials/nav.njk
@@ -15,6 +15,15 @@
 		{% for n in metadata.navbar.list %}
           <li><a href="{{n.url}}" class="brutal-nav-link glitch-hover">{{n.nav}}</a></li>
 		  {% endfor %}
+          <li>
+<button class="accessibility-toggle" id="reduceMotionToggle" aria-label="Turn Off Animation">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+    <path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c-9.4 9.4-9.4 24.6 0 33.9l47 47-47 47c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l47-47 47 47c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-47-47 47-47c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-47 47-47-47c-9.4-9.4-24.6-9.4-33.9 0z"/>
+  </svg>
+  <span>Turn Off Animation</span>
+</button>
+
+		  </li>
         </ul>
       </div>
     </div>
